@@ -1,6 +1,6 @@
 // **********************************************************************
 //
-// Copyright (c) 2003-2016 ZeroC, Inc. All rights reserved.
+// Copyright (c) 2003-2018 ZeroC, Inc. All rights reserved.
 //
 // This copy of Ice is licensed to you under the terms described in the
 // ICE_LICENSE file included in this distribution.
@@ -116,6 +116,8 @@ public class InputStream
 
     /**
      * This constructor uses the given encoding version.
+     *
+     * @param encoding The encoding version to use when extracting data.
      **/
     public InputStream(EncodingVersion encoding)
     {
@@ -126,6 +128,7 @@ public class InputStream
     /**
      * This constructor uses the given encoding version.
      *
+     * @param encoding The encoding version to use when extracting data.
      * @param data The byte array containing encoded Slice types.
      **/
     public InputStream(EncodingVersion encoding, byte[] data)
@@ -137,6 +140,7 @@ public class InputStream
     /**
      * This constructor uses the given encoding version.
      *
+     * @param encoding The encoding version to use when extracting data.
      * @param buf The byte buffer containing encoded Slice types.
      **/
     public InputStream(EncodingVersion encoding, java.nio.ByteBuffer buf)
@@ -294,7 +298,7 @@ public class InputStream
     }
 
     /**
-     * Releases any data retained by encapsulations. The {@link #reset} method internally calls </code>clear</code>.
+     * Releases any data retained by encapsulations. The {@link #reset} method internally calls <code>clear</code>.
      **/
     public void clear()
     {
@@ -486,7 +490,7 @@ public class InputStream
     public void resize(int sz)
     {
         _buf.resize(sz, true);
-        _buf.b.position(sz);
+        _buf.position(sz);
     }
 
     public IceInternal.Buffer getBuffer()
@@ -577,7 +581,7 @@ public class InputStream
         _encapsStack.sz = sz;
 
         EncodingVersion encoding = new EncodingVersion();
-        encoding.__read(this);
+        encoding.ice_readMembers(this);
         IceInternal.Protocol.checkSupportedEncoding(encoding); // Make sure the encoding is supported.
         _encapsStack.setEncoding(encoding);
 
@@ -646,7 +650,9 @@ public class InputStream
             throw new Ice.UnmarshalOutOfBoundsException();
         }
 
-        EncodingVersion encoding = EncodingVersion.read(this, null);
+        EncodingVersion encoding = EncodingVersion.ice_read(this);
+        IceInternal.Protocol.checkSupportedEncoding(encoding); // Make sure the encoding is supported.
+
         if(encoding.equals(Ice.Util.Encoding_1_0))
         {
             if(sz != 6)
@@ -660,7 +666,7 @@ public class InputStream
             // Skip the optional content of the encapsulation if we are expecting an
             // empty encapsulation.
             //
-            _buf.b.position(_buf.b.position() + sz - 6);
+            _buf.position(_buf.b.position() + sz - 6);
         }
         return encoding;
     }
@@ -687,12 +693,12 @@ public class InputStream
 
         if(encoding != null)
         {
-            encoding.__read(this);
-            _buf.b.position(_buf.b.position() - 6);
+            encoding.ice_readMembers(this);
+            _buf.position(_buf.b.position() - 6);
         }
         else
         {
-            _buf.b.position(_buf.b.position() - 4);
+            _buf.position(_buf.b.position() - 4);
         }
 
         byte[] v = new byte[sz];
@@ -741,10 +747,10 @@ public class InputStream
             throw new UnmarshalOutOfBoundsException();
         }
         EncodingVersion encoding = new EncodingVersion();
-        encoding.__read(this);
+        encoding.ice_readMembers(this);
         try
         {
-            _buf.b.position(_buf.b.position() + sz - 6);
+            _buf.position(_buf.b.position() + sz - 6);
         }
         catch(IllegalArgumentException ex)
         {
@@ -842,6 +848,7 @@ public class InputStream
     /**
      * Reads and validates a sequence size.
      *
+     * @param minSize The minimum size required by the sequence type.
      * @return The extracted size.
      **/
     public int readAndCheckSeqSize(int minSize)
@@ -1021,8 +1028,10 @@ public class InputStream
         {
             final int sz = readAndCheckSeqSize(1);
             java.nio.ByteBuffer v = _buf.b.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.ByteBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1198,7 +1207,7 @@ public class InputStream
             short[] v = new short[sz];
             java.nio.ShortBuffer shortBuf = _buf.b.asShortBuffer();
             shortBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 2);
+            _buf.position(_buf.b.position() + sz * 2);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1238,8 +1247,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(2);
             java.nio.ShortBuffer shortBuf = _buf.b.asShortBuffer();
             java.nio.ShortBuffer v = shortBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 2);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.ShortBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 2);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1296,7 +1307,7 @@ public class InputStream
             int[] v = new int[sz];
             java.nio.IntBuffer intBuf = _buf.b.asIntBuffer();
             intBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            _buf.position(_buf.b.position() + sz * 4);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1336,8 +1347,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(4);
             java.nio.IntBuffer intBuf = _buf.b.asIntBuffer();
             java.nio.IntBuffer v = intBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.IntBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 4);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1394,7 +1407,7 @@ public class InputStream
             long[] v = new long[sz];
             java.nio.LongBuffer longBuf = _buf.b.asLongBuffer();
             longBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            _buf.position(_buf.b.position() + sz * 8);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1434,8 +1447,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(8);
             java.nio.LongBuffer longBuf = _buf.b.asLongBuffer();
             java.nio.LongBuffer v = longBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.LongBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 8);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1492,7 +1507,7 @@ public class InputStream
             float[] v = new float[sz];
             java.nio.FloatBuffer floatBuf = _buf.b.asFloatBuffer();
             floatBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            _buf.position(_buf.b.position() + sz * 4);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1532,8 +1547,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(4);
             java.nio.FloatBuffer floatBuf = _buf.b.asFloatBuffer();
             java.nio.FloatBuffer v = floatBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.FloatBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 4);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1590,7 +1607,7 @@ public class InputStream
             double[] v = new double[sz];
             java.nio.DoubleBuffer doubleBuf = _buf.b.asDoubleBuffer();
             doubleBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            _buf.position(_buf.b.position() + sz * 8);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1630,8 +1647,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(8);
             java.nio.DoubleBuffer doubleBuf = _buf.b.asDoubleBuffer();
             java.nio.DoubleBuffer v = doubleBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.DoubleBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 8);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1859,6 +1878,7 @@ public class InputStream
     /**
      * Extracts the index of an optional Slice value from the stream.
      *
+     * @param tag The tag associated with the value.
      * @param v Holds the optional value (if any). If a value is present, it will not be set in the
      * argument until after {@link #readPendingValues} has completed.
      **/
@@ -1877,6 +1897,8 @@ public class InputStream
 
     /**
      * Extracts a user exception from the stream and throws it.
+     *
+     * @throws UserException The user exception that was unmarshaled.
      **/
     public void throwException()
         throws UserException
@@ -1889,6 +1911,8 @@ public class InputStream
      * to instantiate exception instances.
      *
      * @param factory The user exception factory, or null to use the stream's default behavior.
+     *
+     * @throws UserException The user exception that was unmarshaled.
      **/
     public void throwException(UserExceptionFactory factory)
         throws UserException
@@ -1915,7 +1939,7 @@ public class InputStream
             final int v = b < 0 ? b + 256 : b;
             if(v == IceInternal.Protocol.OPTIONAL_END_MARKER)
             {
-                _buf.b.position(_buf.b.position() - 1); // Rewind.
+                _buf.position(_buf.b.position() - 1); // Rewind.
                 return false;
             }
 
@@ -1929,7 +1953,7 @@ public class InputStream
             if(tag > readTag)
             {
                 int offset = tag < 30 ? 1 : (tag < 255 ? 2 : 6); // Rewind
-                _buf.b.position(_buf.b.position() - offset);
+                _buf.position(_buf.b.position() - offset);
                 return false; // No optional data members with the requested tag.
             }
             else if(tag < readTag)
@@ -2033,7 +2057,7 @@ public class InputStream
         {
             throw new UnmarshalOutOfBoundsException();
         }
-        _buf.b.position(_buf.b.position() + size);
+        _buf.position(_buf.b.position() + size);
     }
 
     /**
@@ -2065,7 +2089,7 @@ public class InputStream
      **/
     public void pos(int n)
     {
-        _buf.b.position(n);
+        _buf.position(n);
     }
 
     /**
@@ -2099,7 +2123,7 @@ public class InputStream
                 Class<?> c = _classResolver.resolveClass(id);
                 if(c != null)
                 {
-                    userEx = (UserException)c.newInstance();
+                    userEx = (UserException)c.getDeclaredConstructor().newInstance();
                 }
             }
         }
@@ -2246,7 +2270,7 @@ public class InputStream
                 {
                     try
                     {
-                        v = (Ice.Object)cls.newInstance();
+                        v = (Ice.Object)cls.getDeclaredConstructor().newInstance();
                     }
                     catch(java.lang.Exception ex)
                     {
@@ -2311,7 +2335,7 @@ public class InputStream
             //
             // Read the instance.
             //
-            v.__read(_stream);
+            v._iceRead(_stream);
 
             if(_patchMap != null)
             {
@@ -2485,7 +2509,7 @@ public class InputStream
                 //
                 if(userEx != null)
                 {
-                    userEx.__read(_stream);
+                    userEx._read(_stream);
                     if(usesClasses)
                     {
                         readPendingValues();
@@ -2790,7 +2814,7 @@ public class InputStream
                 //
                 if(userEx != null)
                 {
-                    userEx.__read(_stream);
+                    userEx._read(_stream);
                     throw userEx;
 
                     // Never reached.
@@ -3008,8 +3032,8 @@ public class InputStream
             info.compactId = _current.compactId;
             info.hasOptionalMembers = (_current.sliceFlags & IceInternal.Protocol.FLAG_HAS_OPTIONAL_MEMBERS) != 0;
             info.isLastSlice = (_current.sliceFlags & IceInternal.Protocol.FLAG_IS_LAST_SLICE) != 0;
-            java.nio.ByteBuffer b = _stream.getBuffer().b;
-            final int end = b.position();
+            IceInternal.Buffer buffer = _stream.getBuffer();
+            final int end = buffer.b.position();
             int dataEnd = end;
             if(info.hasOptionalMembers)
             {
@@ -3020,9 +3044,9 @@ public class InputStream
                 --dataEnd;
             }
             info.bytes = new byte[dataEnd - start];
-            b.position(start);
-            b.get(info.bytes);
-            b.position(end);
+            buffer.position(start);
+            buffer.b.get(info.bytes);
+            buffer.position(end);
 
             if(_current.slices == null) // Lazy initialization
             {
@@ -3123,7 +3147,7 @@ public class InputStream
                         {
                             try
                             {
-                                v = (Ice.Object)cls.newInstance();
+                                v = (Ice.Object)cls.getDeclaredConstructor().newInstance();
                                 updateCache = false;
                             }
                             catch(java.lang.Exception ex)
