@@ -1,6 +1,6 @@
 // **********************************************************************
 //
-// Copyright (c) 2003-2016 ZeroC, Inc. All rights reserved.
+// Copyright (c) 2003-2018 ZeroC, Inc. All rights reserved.
 //
 // This copy of Ice is licensed to you under the terms described in the
 // ICE_LICENSE file included in this distribution.
@@ -13,6 +13,7 @@ import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.List;
 import java.security.cert.*;
+import javax.net.ssl.SSLParameters;
 
 class SSLEngine
 {
@@ -124,7 +125,7 @@ class SSLEngine
 
             try
             {
-                _verifier = (CertificateVerifier)cls.newInstance();
+                _verifier = (CertificateVerifier)cls.getDeclaredConstructor().newInstance();
             }
             catch(Throwable ex)
             {
@@ -159,7 +160,7 @@ class SSLEngine
 
             try
             {
-                _passwordCallback = (PasswordCallback)cls.newInstance();
+                _passwordCallback = (PasswordCallback)cls.getDeclaredConstructor().newInstance();
             }
             catch(Throwable ex)
             {
@@ -829,10 +830,11 @@ class SSLEngine
             // Disable SSLv3
             //
             List<String> protocols = new ArrayList<String>(java.util.Arrays.asList(engine.getEnabledProtocols()));
-            protocols.remove("SSLv3");
-            engine.setEnabledProtocols(protocols.toArray(new String[protocols.size()]));
+            if(protocols.remove("SSLv3"))
+            {
+                engine.setEnabledProtocols(protocols.toArray(new String[protocols.size()]));
+            }
         }
-
 
         if(incoming)
         {
@@ -848,6 +850,19 @@ class SSLEngine
             else
             {
                 engine.setNeedClientAuth(true);
+            }
+        }
+        else
+        {
+            //
+            // Enable the HTTPS hostname verification algorithm. This requires Android API 24 therefore we
+            // don't use it on Android in Java Compat.
+            //
+            if(_checkCertName && _verifyPeer > 0 && host != null && !IceInternal.Util.isAndroid())
+            {
+                SSLParameters params = new SSLParameters();
+                params.setEndpointIdentificationAlgorithm("HTTPS");
+                engine.setSSLParameters(params);
             }
         }
 
@@ -955,147 +970,135 @@ class SSLEngine
         return _communicator;
     }
 
-    void verifyPeer(String address, NativeConnectionInfo info, String desc)
+    void verifyPeer(String address, ConnectionInfo info, String desc)
     {
-        //
-        // IceSSL.VerifyPeer is translated into the proper SSLEngine configuration
-        // for a server, but we have to do it ourselves for a client.
-        //
-        if(!info.incoming)
+        if(!info.incoming && _verifyPeer > 0)
         {
-            if(_verifyPeer > 0 && !info.verified)
+            //
+            // IceSSL.VerifyPeer is translated into the proper SSLEngine configuration
+            // for a server, but we have to do it ourselves for a client.
+            //
+            if(!info.verified)
             {
                 throw new Ice.SecurityException("IceSSL: server did not supply a certificate");
             }
-        }
 
-        //
-        // For an outgoing connection, we compare the proxy address (if any) against
-        // fields in the server's certificate (if any).
-        //
-        if(info.nativeCerts != null && info.nativeCerts.length > 0 && address.length() > 0)
-        {
-            X509Certificate cert = (X509Certificate)info.nativeCerts[0];
+            assert(info.certs != null && info.certs.length > 0);
 
             //
-            // Extract the IP addresses and the DNS names from the subject
-            // alternative names.
+            // If IceSSL.CheckCertName is enabled on Android, we have to handle this manually.
             //
-            java.util.ArrayList<String> ipAddresses = new java.util.ArrayList<String>();
-            java.util.ArrayList<String> dnsNames = new java.util.ArrayList<String>();
-            try
+            if(_checkCertName && address.length() > 0 && IceInternal.Util.isAndroid())
             {
-                java.util.Collection<java.util.List<?> > subjectAltNames = cert.getSubjectAlternativeNames();
-                if(subjectAltNames != null)
-                {
-                    for(java.util.List<?> l : subjectAltNames)
-                    {
-                        assert(!l.isEmpty());
-                        Integer n = (Integer)l.get(0);
-                        if(n.intValue() == 7)
-                        {
-                            ipAddresses.add((String)l.get(1));
-                        }
-                        else if(n.intValue() == 2)
-                        {
-                            dnsNames.add(((String)l.get(1)).toLowerCase());
-                        }
-                    }
-                }
-            }
-            catch(CertificateParsingException ex)
-            {
-                assert(false);
-            }
-
-            //
-            // Compare the peer's address against the common name as well as
-            // the dnsName and ipAddress values in the subject alternative name.
-            //
-            boolean certNameOK = false;
-            String dn = "";
-            String addrLower = address.toLowerCase();
-            {
-                javax.security.auth.x500.X500Principal principal = cert.getSubjectX500Principal();
-                dn = principal.getName(javax.security.auth.x500.X500Principal.CANONICAL);
                 //
-                // Canonical format is already in lower case.
+                // For an outgoing connection, we compare the proxy address (if any) against
+                // fields in the server's certificate (if any).
                 //
-                String cn = "cn=" + addrLower;
-                int pos = dn.indexOf(cn);
-                if(pos >= 0)
-                {
-                    //
-                    // Ensure we match the entire common name.
-                    //
-                    certNameOK = (pos + cn.length() == dn.length()) || (dn.charAt(pos + cn.length()) == ',');
-                }
-            }
+                X509Certificate cert = (X509Certificate)info.certs[0];
 
-            //
-            // Compare the peer's address against the dnsName and ipAddress
-            // values in the subject alternative name.
-            //
-            if(!certNameOK)
-            {
-                certNameOK = ipAddresses.contains(addrLower);
-            }
-            if(!certNameOK)
-            {
-                certNameOK = dnsNames.contains(addrLower);
-            }
-
-            //
-            // Log a message if the name comparison fails. If CheckCertName is defined,
-            // we also raise an exception to abort the connection. Don't log a message if
-            // CheckCertName is not defined and a verifier is present.
-            //
-            if(!certNameOK && (_checkCertName || (_securityTraceLevel >= 1 && _verifier == null)))
-            {
-                StringBuilder sb = new StringBuilder(128);
-                sb.append("IceSSL: ");
-                if(!_checkCertName)
+                //
+                // Extract the IP addresses and the DNS names from the subject
+                // alternative names.
+                //
+                java.util.ArrayList<String> ipAddresses = new java.util.ArrayList<String>();
+                java.util.ArrayList<String> dnsNames = new java.util.ArrayList<String>();
+                try
                 {
-                    sb.append("ignoring ");
-                }
-                sb.append("certificate validation failure:\npeer certificate does not have `");
-                sb.append(address);
-                sb.append("' as its commonName or in its subjectAltName extension");
-                if(dn.length() > 0)
-                {
-                    sb.append("\nSubject DN: ");
-                    sb.append(dn);
-                }
-                if(!dnsNames.isEmpty())
-                {
-                    sb.append("\nDNS names found in certificate: ");
-                    for(int j = 0; j < dnsNames.size(); ++j)
+                    java.util.Collection<java.util.List<?> > subjectAltNames = cert.getSubjectAlternativeNames();
+                    if(subjectAltNames != null)
                     {
-                        if(j > 0)
+                        for(java.util.List<?> l : subjectAltNames)
                         {
-                            sb.append(", ");
+                            assert(!l.isEmpty());
+                            Integer n = (Integer)l.get(0);
+                            if(n.intValue() == 7)
+                            {
+                                ipAddresses.add((String)l.get(1));
+                            }
+                            else if(n.intValue() == 2)
+                            {
+                                dnsNames.add(((String)l.get(1)).toLowerCase());
+                            }
                         }
-                        sb.append(dnsNames.get(j));
                     }
                 }
-                if(!ipAddresses.isEmpty())
+                catch(CertificateParsingException ex)
                 {
-                    sb.append("\nIP addresses found in certificate: ");
-                    for(int j = 0; j < ipAddresses.size(); ++j)
+                    assert(false);
+                }
+
+                //
+                // Compare the peer's address against the common name as well as
+                // the dnsName and ipAddress values in the subject alternative name.
+                //
+                boolean certNameOK = false;
+                String dn = "";
+                String addrLower = address.toLowerCase();
+                {
+                    javax.security.auth.x500.X500Principal principal = cert.getSubjectX500Principal();
+                    dn = principal.getName(javax.security.auth.x500.X500Principal.CANONICAL);
+                    //
+                    // Canonical format is already in lower case.
+                    //
+                    String cn = "cn=" + addrLower;
+                    int pos = dn.indexOf(cn);
+                    if(pos >= 0)
                     {
-                        if(j > 0)
-                        {
-                            sb.append(", ");
-                        }
-                        sb.append(ipAddresses.get(j));
+                        //
+                        // Ensure we match the entire common name.
+                        //
+                        certNameOK = (pos + cn.length() == dn.length()) || (dn.charAt(pos + cn.length()) == ',');
                     }
                 }
-                if(_securityTraceLevel >= 1)
+
+                //
+                // Compare the peer's address against the dnsName and ipAddress
+                // values in the subject alternative name.
+                //
+                if(!certNameOK)
                 {
-                    _logger.trace(_securityTraceCategory, sb.toString());
+                    certNameOK = ipAddresses.contains(addrLower);
                 }
-                if(_checkCertName)
+                if(!certNameOK)
                 {
+                    certNameOK = dnsNames.contains(addrLower);
+                }
+
+                if(!certNameOK)
+                {
+                    StringBuilder sb = new StringBuilder(128);
+                    sb.append("IceSSL: certificate validation failure:\npeer certificate does not have `");
+                    sb.append(address);
+                    sb.append("' as its commonName or in its subjectAltName extension");
+                    if(dn.length() > 0)
+                    {
+                        sb.append("\nSubject DN: ");
+                        sb.append(dn);
+                    }
+                    if(!dnsNames.isEmpty())
+                    {
+                        sb.append("\nDNS names found in certificate: ");
+                        for(int j = 0; j < dnsNames.size(); ++j)
+                        {
+                            if(j > 0)
+                            {
+                                sb.append(", ");
+                            }
+                            sb.append(dnsNames.get(j));
+                        }
+                    }
+                    if(!ipAddresses.isEmpty())
+                    {
+                        sb.append("\nIP addresses found in certificate: ");
+                        for(int j = 0; j < ipAddresses.size(); ++j)
+                        {
+                            if(j > 0)
+                            {
+                                sb.append(", ");
+                            }
+                            sb.append(ipAddresses.get(j));
+                        }
+                    }
                     Ice.SecurityException ex = new Ice.SecurityException();
                     ex.reason = sb.toString();
                     throw ex;
@@ -1103,10 +1106,10 @@ class SSLEngine
             }
         }
 
-        if(_verifyDepthMax > 0 && info.nativeCerts != null && info.nativeCerts.length > _verifyDepthMax)
+        if(_verifyDepthMax > 0 && info.certs != null && info.certs.length > _verifyDepthMax)
         {
             String msg = (info.incoming ? "incoming" : "outgoing") + " connection rejected:\n" +
-                "length of peer's certificate chain (" + info.nativeCerts.length + ") exceeds maximum of " +
+                "length of peer's certificate chain (" + info.certs.length + ") exceeds maximum of " +
                 _verifyDepthMax + "\n" + desc;
             if(_securityTraceLevel >= 1)
             {
