@@ -1,6 +1,6 @@
 // **********************************************************************
 //
-// Copyright (c) 2003-2016 ZeroC, Inc. All rights reserved.
+// Copyright (c) 2003-2018 ZeroC, Inc. All rights reserved.
 //
 // This copy of Ice is licensed to you under the terms described in the
 // ICE_LICENSE file included in this distribution.
@@ -14,7 +14,6 @@ import java.io.IOException;
 import com.zeroc.IceInternal.Buffer;
 import com.zeroc.IceInternal.Instance;
 import com.zeroc.IceInternal.Protocol;
-import com.zeroc.IceInternal.SequencePatcher;
 
 /**
  * Interface for input streams used to extract Slice types from a sequence
@@ -121,6 +120,8 @@ public class InputStream
 
     /**
      * This constructor uses the given encoding version.
+     *
+     * @param encoding The encoding version to use when extracting data.
      **/
     public InputStream(EncodingVersion encoding)
     {
@@ -131,6 +132,7 @@ public class InputStream
     /**
      * This constructor uses the given encoding version.
      *
+     * @param encoding The encoding version to use when extracting data.
      * @param data The byte array containing encoded Slice types.
      **/
     public InputStream(EncodingVersion encoding, byte[] data)
@@ -142,6 +144,7 @@ public class InputStream
     /**
      * This constructor uses the given encoding version.
      *
+     * @param encoding The encoding version to use when extracting data.
      * @param buf The byte buffer containing encoded Slice types.
      **/
     public InputStream(EncodingVersion encoding, java.nio.ByteBuffer buf)
@@ -299,7 +302,7 @@ public class InputStream
     }
 
     /**
-     * Releases any data retained by encapsulations. The {@link #reset} method internally calls </code>clear</code>.
+     * Releases any data retained by encapsulations. The {@link #reset} method internally calls <code>clear</code>.
      **/
     public void clear()
     {
@@ -317,7 +320,7 @@ public class InputStream
     }
 
     /**
-     * Sets the value factory manager to use when marshaling value instances. If the stream
+     * Sets the value factory manager to use when unmarshaling value instances. If the stream
      * was initialized with a communicator, the communicator's value factory manager will
      * be used by default.
      *
@@ -347,7 +350,7 @@ public class InputStream
      *
      * @param r The compact ID resolver.
      **/
-    public void setCompactIdResolver(CompactIdResolver r)
+    public void setCompactIdResolver(java.util.function.IntFunction<String> r)
     {
         _compactIdResolver = r;
     }
@@ -359,7 +362,7 @@ public class InputStream
      *
      * @param r The class resolver.
      **/
-    public void setClassResolver(ClassResolver r)
+    public void setClassResolver(java.util.function.Function<String, Class<?>> r)
     {
         _classResolver = r;
     }
@@ -469,11 +472,11 @@ public class InputStream
         other._logger = _logger;
         _logger = tmpLogger;
 
-        CompactIdResolver tmpCompactIdResolver = other._compactIdResolver;
+        java.util.function.IntFunction<String> tmpCompactIdResolver = other._compactIdResolver;
         other._compactIdResolver = _compactIdResolver;
         _compactIdResolver = tmpCompactIdResolver;
 
-        ClassResolver tmpClassResolver = other._classResolver;
+        java.util.function.Function<String, Class<?>> tmpClassResolver = other._classResolver;
         other._classResolver = _classResolver;
         _classResolver = tmpClassResolver;
     }
@@ -491,7 +494,7 @@ public class InputStream
     public void resize(int sz)
     {
         _buf.resize(sz, true);
-        _buf.b.position(sz);
+        _buf.position(sz);
     }
 
     public Buffer getBuffer()
@@ -581,7 +584,7 @@ public class InputStream
         }
         _encapsStack.sz = sz;
 
-        EncodingVersion encoding = EncodingVersion.read(this, null);
+        EncodingVersion encoding = EncodingVersion.ice_read(this);
         Protocol.checkSupportedEncoding(encoding); // Make sure the encoding is supported.
         _encapsStack.setEncoding(encoding);
 
@@ -589,7 +592,7 @@ public class InputStream
     }
 
     /**
-     * Ends the previous encapsulation.
+     * Ends the current encapsulation.
      **/
     public void endEncapsulation()
     {
@@ -650,7 +653,9 @@ public class InputStream
             throw new UnmarshalOutOfBoundsException();
         }
 
-        EncodingVersion encoding = EncodingVersion.read(this, null);
+        EncodingVersion encoding = EncodingVersion.ice_read(this);
+        Protocol.checkSupportedEncoding(encoding); // Make sure the encoding is supported.
+
         if(encoding.equals(Util.Encoding_1_0))
         {
             if(sz != 6)
@@ -664,7 +669,7 @@ public class InputStream
             // Skip the optional content of the encapsulation if we are expecting an
             // empty encapsulation.
             //
-            _buf.b.position(_buf.b.position() + sz - 6);
+            _buf.position(_buf.b.position() + sz - 6);
         }
         return encoding;
     }
@@ -674,7 +679,7 @@ public class InputStream
      * is returned in the argument.
      *
      * @param encoding The encapsulation's encoding version.
-     * @return The encoded encapuslation.
+     * @return The encoded encapsulation.
      **/
     public byte[] readEncapsulation(EncodingVersion encoding)
     {
@@ -691,12 +696,12 @@ public class InputStream
 
         if(encoding != null)
         {
-            encoding.ice_read(this);
-            _buf.b.position(_buf.b.position() - 6);
+            encoding.ice_readMembers(this);
+            _buf.position(_buf.b.position() - 6);
         }
         else
         {
-            _buf.b.position(_buf.b.position() - 4);
+            _buf.position(_buf.b.position() - 4);
         }
 
         byte[] v = new byte[sz];
@@ -744,10 +749,10 @@ public class InputStream
         {
             throw new UnmarshalOutOfBoundsException();
         }
-        EncodingVersion encoding = EncodingVersion.read(this, null);
+        EncodingVersion encoding = EncodingVersion.ice_read(this);
         try
         {
-            _buf.b.position(_buf.b.position() + sz - 6);
+            _buf.position(_buf.b.position() + sz - 6);
         }
         catch(IllegalArgumentException ex)
         {
@@ -788,7 +793,7 @@ public class InputStream
     /**
      * Indicates that unmarshaling is complete, except for any class instances. The application must call this method
      * only if the stream actually contains class instances. Calling <code>readPendingValues</code> triggers the
-     * calls to {@link ReadValueCallback#valueReady} that inform the application that unmarshaling of an instance
+     * calls to consumers provided with {@link #readValue} to inform the application that unmarshaling of an instance
      * is complete.
      **/
     public void readPendingValues()
@@ -845,6 +850,7 @@ public class InputStream
     /**
      * Reads and validates a sequence size.
      *
+     * @param minSize The minimum size required by the sequence type.
      * @return The extracted size.
      **/
     public int readAndCheckSeqSize(int minSize)
@@ -1024,8 +1030,10 @@ public class InputStream
         {
             final int sz = readAndCheckSeqSize(1);
             java.nio.ByteBuffer v = _buf.b.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.ByteBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1037,9 +1045,11 @@ public class InputStream
     /**
      * Extracts a serializable Java object from the stream.
      *
+     * @param <T> The serializable type.
+     * @param cl The class for the serializable type.
      * @return The deserialized Java object.
      **/
-    public java.io.Serializable readSerializable()
+    public <T extends java.io.Serializable> T readSerializable(Class<T> cl)
     {
         int sz = readAndCheckSeqSize(1);
         if (sz == 0)
@@ -1051,7 +1061,7 @@ public class InputStream
         {
             com.zeroc.IceInternal.InputStreamWrapper w = new com.zeroc.IceInternal.InputStreamWrapper(sz, _buf.b);
             in = new com.zeroc.IceInternal.ObjectInputStream(_instance, w);
-            return (java.io.Serializable)in.readObject();
+            return cl.cast(in.readObject());
         }
         catch(LocalException ex)
         {
@@ -1074,6 +1084,26 @@ public class InputStream
                     throw new MarshalException("cannot deserialize object", ex);
                 }
             }
+        }
+    }
+
+    /**
+     * Extracts a optional serializable Java object from the stream.
+     *
+     * @param <T> The serializable type.
+     * @param tag The numeric tag associated with the value.
+     * @param cl The class for the serializable type.
+     * @return The optional value (if any).
+     **/
+    public <T extends java.io.Serializable> java.util.Optional<T> readSerializable(int tag, Class<T> cl)
+    {
+        if(readOptional(tag, OptionalFormat.VSize))
+        {
+            return java.util.Optional.of(readSerializable(cl));
+        }
+        else
+        {
+            return java.util.Optional.empty();
         }
     }
 
@@ -1201,7 +1231,7 @@ public class InputStream
             short[] v = new short[sz];
             java.nio.ShortBuffer shortBuf = _buf.b.asShortBuffer();
             shortBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 2);
+            _buf.position(_buf.b.position() + sz * 2);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1241,8 +1271,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(2);
             java.nio.ShortBuffer shortBuf = _buf.b.asShortBuffer();
             java.nio.ShortBuffer v = shortBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 2);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.ShortBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 2);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1299,7 +1331,7 @@ public class InputStream
             int[] v = new int[sz];
             java.nio.IntBuffer intBuf = _buf.b.asIntBuffer();
             intBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            _buf.position(_buf.b.position() + sz * 4);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1339,8 +1371,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(4);
             java.nio.IntBuffer intBuf = _buf.b.asIntBuffer();
             java.nio.IntBuffer v = intBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.IntBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 4);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1397,7 +1431,7 @@ public class InputStream
             long[] v = new long[sz];
             java.nio.LongBuffer longBuf = _buf.b.asLongBuffer();
             longBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            _buf.position(_buf.b.position() + sz * 8);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1437,8 +1471,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(8);
             java.nio.LongBuffer longBuf = _buf.b.asLongBuffer();
             java.nio.LongBuffer v = longBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.LongBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 8);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1495,7 +1531,7 @@ public class InputStream
             float[] v = new float[sz];
             java.nio.FloatBuffer floatBuf = _buf.b.asFloatBuffer();
             floatBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            _buf.position(_buf.b.position() + sz * 4);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1535,8 +1571,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(4);
             java.nio.FloatBuffer floatBuf = _buf.b.asFloatBuffer();
             java.nio.FloatBuffer v = floatBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 4);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.FloatBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 4);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1593,7 +1631,7 @@ public class InputStream
             double[] v = new double[sz];
             java.nio.DoubleBuffer doubleBuf = _buf.b.asDoubleBuffer();
             doubleBuf.get(v);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            _buf.position(_buf.b.position() + sz * 8);
             return v;
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1633,8 +1671,10 @@ public class InputStream
             final int sz = readAndCheckSeqSize(8);
             java.nio.DoubleBuffer doubleBuf = _buf.b.asDoubleBuffer();
             java.nio.DoubleBuffer v = doubleBuf.slice();
-            v.limit(sz);
-            _buf.b.position(_buf.b.position() + sz * 8);
+            // Cast to java.nio.Buffer to avoid incompatible covariant
+            // return type used in Java 9 java.nio.DoubleBuffer
+            ((java.nio.Buffer)v).limit(sz);
+            _buf.position(_buf.b.position() + sz * 8);
             return v.asReadOnlyBuffer();
         }
         catch(java.nio.BufferUnderflowException ex)
@@ -1796,6 +1836,16 @@ public class InputStream
         return _instance.proxyFactory().streamToProxy(this);
     }
 
+    public <T extends ObjectPrx> T readProxy(java.util.function.Function<ObjectPrx, T> cast)
+    {
+        if(_instance == null)
+        {
+            throw new MarshalException("cannot unmarshal a proxy without a communicator");
+        }
+
+        return cast.apply(_instance.proxyFactory().streamToProxy(this));
+    }
+
     /**
      * Extracts an optional proxy from the stream. The stream must have been initialized with a communicator.
      *
@@ -1808,6 +1858,27 @@ public class InputStream
         {
             skip(4);
             return java.util.Optional.of(readProxy());
+        }
+        else
+        {
+            return java.util.Optional.empty();
+        }
+    }
+
+    /**
+     * Extracts an optional proxy from the stream. The stream must have been initialized with a communicator.
+     *
+     * @param <T> The proxy type.
+     * @param tag The numeric tag associated with the value.
+     * @param cast The uncheckedCast function to call on the unmarshaled proxy to obtain the correct proxy type.
+     * @return The optional value (if any).
+     **/
+    public <T extends ObjectPrx> java.util.Optional<T> readProxy(int tag, java.util.function.Function<ObjectPrx, T> cast)
+    {
+        if(readOptional(tag, OptionalFormat.FSize))
+        {
+            skip(4);
+            return java.util.Optional.of(readProxy(cast));
         }
         else
         {
@@ -1845,44 +1916,103 @@ public class InputStream
     }
 
     /**
-     * Extracts the index of a Slice value from the stream.
+     * Extracts a Slice value from the stream.
      *
-     * @param cb The callback to notify the application when the extracted instance is available.
-     * The stream extracts Slice values in stages. The Ice run time calls {@link ReadValueCallback#valueReady}
-     * when the corresponding instance has been fully unmarshaled.
+     * @param <T> The value type.
      *
-     * @see ReadValueCallback
+     * @param cb The consumer to notify when the extracted instance is available. The stream
+     * extracts Slice values in stages. The Ice run time calls accept on the consumer when
+     * the corresponding instance has been fully unmarshaled.
+     *
+     * @param cls The type of the Ice.Value to unmarshal.
      **/
-    public void readValue(ReadValueCallback cb)
+    public <T extends Value> void readValue(java.util.function.Consumer<T> cb, Class<T> cls)
     {
         initEncaps();
-        _encapsStack.decoder.readValue(cb);
-    }
-
-    /**
-     * Extracts the index of an optional Slice value from the stream.
-     *
-     * @param tag The numeric tag associated with the value.
-     * @param cb The callback to notify the application when the extracted instance is available.
-     * The stream extracts Slice values in stages. The Ice run time calls {@link ReadValueCallback#valueReady}
-     * when the corresponding instance has been fully unmarshaled.
-     *
-     * @see ReadValueCallback
-     **/
-    public void readValue(int tag, ReadValueCallback cb)
-    {
-        if(readOptional(tag, OptionalFormat.Class))
+        if(cb == null)
         {
-            readValue(cb);
+            _encapsStack.decoder.readValue(null);
         }
         else
         {
-            cb.valueReady(null);
+            _encapsStack.decoder.readValue(v -> {
+                if(v == null || cls.isInstance(v))
+                {
+                    cb.accept(cls.cast(v));
+                }
+                else
+                {
+                    com.zeroc.IceInternal.Ex.throwUOE(cls, v);
+                }
+            });
         }
+    }
+
+    /**
+     * Extracts a Slice value from the stream.
+     *
+     * @param cb The consumer to notify when the extracted instance is available. The stream
+     * extracts Slice values in stages. The Ice run time calls accept on the consumer when
+     * the corresponding instance has been fully unmarshaled.
+     **/
+    public void readValue(java.util.function.Consumer<Value> cb)
+    {
+        readValue(cb, Value.class);
+    }
+
+    /**
+     * Extracts an optional Slice value from the stream.
+     *
+     * @param <T> The value type.
+     *
+     * @param tag The numeric tag associated with the value.
+     *
+     * @param cb The consumer to notify when the extracted instance is available. The stream
+     * extracts Slice values in stages. The Ice run time calls accept on the consumer when
+     * the corresponding instance has been fully unmarshaled.
+     *
+     * @param cls The type of the Ice.Value to unmarshal.
+     **/
+    public <T extends Value> void readValue(int tag, java.util.function.Consumer<java.util.Optional<T>> cb, Class<T> cls)
+    {
+        if(readOptional(tag, OptionalFormat.Class))
+        {
+            if(cb != null)
+            {
+                readValue(v -> cb.accept(java.util.Optional.ofNullable(v)), cls);
+            }
+            else
+            {
+                readValue(null);
+            }
+        }
+        else
+        {
+            if(cb != null)
+            {
+                cb.accept(java.util.Optional.empty());
+            }
+        }
+    }
+
+    /**
+     * Extracts an optional Slice value from the stream.
+     *
+     * @param tag The numeric tag associated with the value.
+     *
+     * @param cb The consumer to notify when the extracted instance is available. The stream
+     * extracts Slice values in stages. The Ice run time calls accept on the consumer when
+     * the corresponding instance has been fully unmarshaled.
+     **/
+    public void readValue(int tag, java.util.function.Consumer<java.util.Optional<Value>> cb)
+    {
+        readValue(tag, cb, Value.class);
     }
 
     /**
      * Extracts a user exception from the stream and throws it.
+     *
+     * @throws UserException The user exception that was unmarshaled.
      **/
     public void throwException()
         throws UserException
@@ -1895,6 +2025,8 @@ public class InputStream
      * to instantiate exception instances.
      *
      * @param factory The user exception factory, or null to use the stream's default behavior.
+     *
+     * @throws UserException The user exception that was unmarshaled.
      **/
     public void throwException(UserExceptionFactory factory)
         throws UserException
@@ -1921,7 +2053,7 @@ public class InputStream
             final int v = b < 0 ? b + 256 : b;
             if(v == Protocol.OPTIONAL_END_MARKER)
             {
-                _buf.b.position(_buf.b.position() - 1); // Rewind.
+                _buf.position(_buf.b.position() - 1); // Rewind.
                 return false;
             }
 
@@ -1935,7 +2067,7 @@ public class InputStream
             if(tag > readTag)
             {
                 int offset = tag < 30 ? 1 : (tag < 255 ? 2 : 6); // Rewind
-                _buf.b.position(_buf.b.position() - offset);
+                _buf.position(_buf.b.position() - offset);
                 return false; // No optional data members with the requested tag.
             }
             else if(tag < readTag)
@@ -1994,7 +2126,7 @@ public class InputStream
         }
         case Class:
         {
-            readValue(null);
+            readValue(null, null);
             break;
         }
         }
@@ -2039,7 +2171,7 @@ public class InputStream
         {
             throw new UnmarshalOutOfBoundsException();
         }
-        _buf.b.position(_buf.b.position() + size);
+        _buf.position(_buf.b.position() + size);
     }
 
     /**
@@ -2071,7 +2203,7 @@ public class InputStream
      **/
     public void pos(int n)
     {
-        _buf.b.position(n);
+        _buf.position(n);
     }
 
     /**
@@ -2102,10 +2234,10 @@ public class InputStream
         {
             if(_classResolver != null)
             {
-                Class<?> c = _classResolver.resolveClass(id);
+                Class<?> c = _classResolver.apply(id);
                 if(c != null)
                 {
-                    userEx = (UserException)c.newInstance();
+                    userEx = (UserException)c.getDeclaredConstructor().newInstance();
                 }
             }
         }
@@ -2127,7 +2259,7 @@ public class InputStream
 
     abstract private static class EncapsDecoder
     {
-        EncapsDecoder(InputStream stream, boolean sliceValues, ValueFactoryManager f, ClassResolver cr)
+        EncapsDecoder(InputStream stream, boolean sliceValues, ValueFactoryManager f, java.util.function.Function<String, Class<?>> cr)
         {
             _stream = stream;
             _sliceValues = sliceValues;
@@ -2137,7 +2269,7 @@ public class InputStream
             _unmarshaledMap = new java.util.TreeMap<>();
         }
 
-        abstract void readValue(ReadValueCallback cb);
+        abstract void readValue(java.util.function.Consumer<Value> cb);
         abstract void throwException(UserExceptionFactory factory)
             throws UserException;
 
@@ -2203,7 +2335,7 @@ public class InputStream
                 {
                     if(_classResolver != null)
                     {
-                        cls = _classResolver.resolveClass(typeId);
+                        cls = _classResolver.apply(typeId);
                         _typeIdCache.put(typeId, cls != null ? cls : EncapsDecoder.class);
                     }
                 }
@@ -2252,7 +2384,7 @@ public class InputStream
                 {
                     try
                     {
-                        v = (Value)cls.newInstance();
+                        v = (Value)cls.getDeclaredConstructor().newInstance();
                     }
                     catch(java.lang.Exception ex)
                     {
@@ -2264,7 +2396,7 @@ public class InputStream
             return v;
         }
 
-        protected void addPatchEntry(int index, ReadValueCallback cb)
+        protected void addPatchEntry(int index, java.util.function.Consumer<Value> cb)
         {
             assert(index > 0);
 
@@ -2275,7 +2407,7 @@ public class InputStream
             Value obj = _unmarshaledMap.get(index);
             if(obj != null)
             {
-                cb.valueReady(obj);
+                cb.accept(obj);
                 return;
             }
 
@@ -2289,7 +2421,7 @@ public class InputStream
             // the callback will be called when the instance is
             // unmarshaled.
             //
-            java.util.LinkedList<ReadValueCallback> l = _patchMap.get(index);
+            java.util.LinkedList<java.util.function.Consumer<Value>> l = _patchMap.get(index);
             if(l == null)
             {
                 //
@@ -2317,14 +2449,14 @@ public class InputStream
             //
             // Read the instance.
             //
-            v.__read(_stream);
+            v._iceRead(_stream);
 
             if(_patchMap != null)
             {
                 //
                 // Patch all instances now that the instance is unmarshaled.
                 //
-                java.util.LinkedList<ReadValueCallback> l = _patchMap.get(index);
+                java.util.LinkedList<java.util.function.Consumer<Value>> l = _patchMap.get(index);
                 if(l != null)
                 {
                     assert(l.size() > 0);
@@ -2332,9 +2464,9 @@ public class InputStream
                     //
                     // Patch all pointers that refer to the instance.
                     //
-                    for(ReadValueCallback cb : l)
+                    for(java.util.function.Consumer<Value> cb : l)
                     {
-                        cb.valueReady(v);
+                        cb.accept(v);
                     }
 
                     //
@@ -2394,12 +2526,12 @@ public class InputStream
         protected final InputStream _stream;
         protected final boolean _sliceValues;
         protected ValueFactoryManager _valueFactoryManager;
-        protected ClassResolver _classResolver;
+        protected java.util.function.Function<String, Class<?>> _classResolver;
 
         //
         // Encapsulation attributes for value unmarshaling.
         //
-        protected java.util.TreeMap<Integer, java.util.LinkedList<ReadValueCallback> > _patchMap;
+        protected java.util.TreeMap<Integer, java.util.LinkedList<java.util.function.Consumer<Value>> > _patchMap;
         private java.util.TreeMap<Integer, Value> _unmarshaledMap;
         private java.util.TreeMap<Integer, String> _typeIdMap;
         private int _typeIdIndex;
@@ -2409,14 +2541,14 @@ public class InputStream
 
     private static final class EncapsDecoder10 extends EncapsDecoder
     {
-        EncapsDecoder10(InputStream stream, boolean sliceValues, ValueFactoryManager f, ClassResolver cr)
+        EncapsDecoder10(InputStream stream, boolean sliceValues, ValueFactoryManager f, java.util.function.Function<String, Class<?>> cr)
         {
             super(stream, sliceValues, f, cr);
             _sliceType = SliceType.NoSlice;
         }
 
         @Override
-        void readValue(ReadValueCallback cb)
+        void readValue(java.util.function.Consumer<Value> cb)
         {
             assert(cb != null);
 
@@ -2432,7 +2564,7 @@ public class InputStream
 
             if(index == 0)
             {
-                cb.valueReady(null);
+                cb.accept(null);
             }
             else
             {
@@ -2492,7 +2624,7 @@ public class InputStream
                 //
                 if(userEx != null)
                 {
-                    userEx.__read(_stream);
+                    userEx._read(_stream);
                     if(usesClasses)
                     {
                         readPendingValues();
@@ -2653,7 +2785,7 @@ public class InputStream
                 // For the 1.0 encoding, the type ID for the base Object class
                 // marks the last slice.
                 //
-                if(_typeId.equals(Value.ice_staticId))
+                if(_typeId.equals(Value.ice_staticId()))
                 {
                     throw new NoValueFactoryException("", mostDerivedId);
                 }
@@ -2700,8 +2832,8 @@ public class InputStream
 
     private static class EncapsDecoder11 extends EncapsDecoder
     {
-        EncapsDecoder11(InputStream stream, boolean sliceValues, ValueFactoryManager f, ClassResolver cr,
-                        CompactIdResolver r)
+        EncapsDecoder11(InputStream stream, boolean sliceValues, ValueFactoryManager f, java.util.function.Function<String, Class<?>> cr,
+                        java.util.function.IntFunction<String> r)
         {
             super(stream, sliceValues, f, cr);
             _compactIdResolver = r;
@@ -2710,7 +2842,7 @@ public class InputStream
         }
 
         @Override
-        void readValue(ReadValueCallback cb)
+        void readValue(java.util.function.Consumer<Value> cb)
         {
             int index = _stream.readSize();
             if(index < 0)
@@ -2721,7 +2853,7 @@ public class InputStream
             {
                 if(cb != null)
                 {
-                    cb.valueReady(null);
+                    cb.accept(null);
                 }
             }
             else if(_current != null && (_current.sliceFlags & Protocol.FLAG_HAS_INDIRECTION_TABLE) != 0)
@@ -2797,7 +2929,7 @@ public class InputStream
                 //
                 if(userEx != null)
                 {
-                    userEx.__read(_stream);
+                    userEx._read(_stream);
                     throw userEx;
 
                     // Never reached.
@@ -3015,8 +3147,8 @@ public class InputStream
             info.compactId = _current.compactId;
             info.hasOptionalMembers = (_current.sliceFlags & Protocol.FLAG_HAS_OPTIONAL_MEMBERS) != 0;
             info.isLastSlice = (_current.sliceFlags & Protocol.FLAG_IS_LAST_SLICE) != 0;
-            java.nio.ByteBuffer b = _stream.getBuffer().b;
-            final int end = b.position();
+            Buffer buffer = _stream.getBuffer();
+            final int end = buffer.b.position();
             int dataEnd = end;
             if(info.hasOptionalMembers)
             {
@@ -3027,9 +3159,9 @@ public class InputStream
                 --dataEnd;
             }
             info.bytes = new byte[dataEnd - start];
-            b.position(start);
-            b.get(info.bytes);
-            b.position(end);
+            buffer.position(start);
+            buffer.b.get(info.bytes);
+            buffer.position(end);
 
             if(_current.slices == null) // Lazy initialization
             {
@@ -3077,7 +3209,7 @@ public class InputStream
             return false;
         }
 
-        private int readInstance(int index, ReadValueCallback cb)
+        private int readInstance(int index, java.util.function.Consumer<Value> cb)
         {
             assert(index > 0);
 
@@ -3130,7 +3262,7 @@ public class InputStream
                         {
                             try
                             {
-                                v = (Value)cls.newInstance();
+                                v = (Value)cls.getDeclaredConstructor().newInstance();
                                 updateCache = false;
                             }
                             catch(java.lang.Exception ex)
@@ -3152,7 +3284,7 @@ public class InputStream
                         {
                             try
                             {
-                                _current.typeId = _compactIdResolver.resolve(_current.compactId);
+                                _current.typeId = _compactIdResolver.apply(_current.compactId);
                             }
                             catch(LocalException ex)
                             {
@@ -3160,7 +3292,7 @@ public class InputStream
                             }
                             catch(Throwable ex)
                             {
-                                throw new MarshalException("exception in CompactIdResolver for ID " +
+                                throw new MarshalException("exception in compact ID resolver for ID " +
                                                            _current.compactId, ex);
                             }
                         }
@@ -3216,7 +3348,7 @@ public class InputStream
                     // We pass the "::Ice::Object" ID to indicate that this is the
                     // last chance to preserve the instance.
                     //
-                    v = newInstance(Value.ice_staticId);
+                    v = newInstance(Value.ice_staticId());
                     if(v == null)
                     {
                         v = new UnknownSlicedValue(mostDerivedId);
@@ -3244,7 +3376,7 @@ public class InputStream
 
             if(cb != null)
             {
-                cb.valueReady(v);
+                cb.accept(v);
             }
 
             return index;
@@ -3275,8 +3407,8 @@ public class InputStream
                 info.instances = new Value[table != null ? table.length : 0];
                 for(int j = 0; j < info.instances.length; ++j)
                 {
-                    addPatchEntry(table[j],
-                                  new SequencePatcher<Value>(info.instances, Value.class, Value.ice_staticId, j));
+                    final int k = j;
+                    addPatchEntry(table[j], v -> info.instances[k] = v);
                 }
             }
 
@@ -3302,7 +3434,7 @@ public class InputStream
         private static final class IndirectPatchEntry
         {
             int index;
-            ReadValueCallback cb;
+            java.util.function.Consumer<Value> cb;
         }
 
         private static final class InstanceData
@@ -3334,7 +3466,7 @@ public class InputStream
             InstanceData next;
         }
 
-        private CompactIdResolver _compactIdResolver;
+        private java.util.function.IntFunction<String> _compactIdResolver;
         private InstanceData _current;
         private int _valueIdIndex; // The ID of the next instance to unmarshal.
         private java.util.TreeMap<Integer, Class<?> > _compactIdCache; // Cache of compact type IDs.
@@ -3431,6 +3563,6 @@ public class InputStream
 
     private ValueFactoryManager _valueFactoryManager;
     private Logger _logger;
-    private CompactIdResolver _compactIdResolver;
-    private ClassResolver _classResolver;
+    private java.util.function.IntFunction<String> _compactIdResolver;
+    private java.util.function.Function<String, Class<?>> _classResolver;
 }
