@@ -1,6 +1,6 @@
 // **********************************************************************
 //
-// Copyright (c) 2003-2016 ZeroC, Inc. All rights reserved.
+// Copyright (c) 2003-2018 ZeroC, Inc. All rights reserved.
 //
 // This copy of Ice is licensed to you under the terms described in the
 // ICE_LICENSE file included in this distribution.
@@ -23,9 +23,12 @@ public class AllTests
         }
     }
 
-    public static InitialPrx allTests(com.zeroc.Ice.Communicator communicator, boolean collocated, PrintWriter out)
+    public static InitialPrx allTests(test.Util.Application app, boolean collocated)
     {
-        String ref = "initial:default -p 12010";
+        PrintWriter out = app.getWriter();
+        com.zeroc.Ice.Communicator communicator = app.communicator();
+
+        String ref = "initial:" + app.getTestEndpoint(0);
         com.zeroc.Ice.ObjectPrx base = communicator.stringToProxy(ref);
         InitialPrx initial = InitialPrx.checkedCast(base);
 
@@ -77,6 +80,7 @@ public class AllTests
         }
         catch(Throwable ex)
         {
+            ex.printStackTrace();
             test(false);
         }
 
@@ -156,8 +160,8 @@ public class AllTests
         test(java.util.Arrays.equals(b.seq2, new int[] { 5, 6, 7, 8, 9 }));
         test(java.util.Arrays.equals(b.seq3, new MyEnum[] { MyEnum.enum3, MyEnum.enum2, MyEnum.enum1 }));
         test(java.util.Arrays.equals(b.seq4, new Base[] { b }));
-        test(b.d1.get(new Byte((byte)1)).equals(Boolean.TRUE));
-        test(b.d2.get(new Short((short)2)).equals(new Integer(3)));
+        test(b.d1.get(Byte.valueOf((byte)1)).equals(Boolean.TRUE));
+        test(b.d2.get(Short.valueOf((short)2)).equals(Integer.valueOf(3)));
         test(b.d3.get("enum3") == MyEnum.enum3);
         test(b.d4.get("b") == b);
         test(b instanceof Derived);
